"Once, men turned their thinking over to machines in the hope that this would set them free. But that only permitted other men with machines to enslave them."
          -- the Reverend Mother
%
"Thou shalt not make a machine to counterfeit a human mind."
          -- the Reverend Mother, correcting the O.C. Bible
